--- a/django_CCOS/templates/dish/dish_list.html
+++ b/django_CCOS/templates/dish/dish_list.html
@@ -20,7 +20,7 @@
                     <img class="card-img-top" src="{{ j.dish_photo.url }}" alt="Card image cap" height="180px"
                          width="320px">
                     <div class="card-body d-flex flex-column" data-cat="{{ i.dish_category }}">
-                        <p class="card-text">{{ j.dish_detail }}</p>
+                        <p class="card-text">销量：{{ j.dish_num }}</p>
                         <div class="mt-auto">
                             <p class="card-text">售价：{{ j.dish_price }} 元</p>
                             <div class="align-self-end container">
